# backdoor-suite

./: .gitignore  .gitmodules  LICENSE  Manifest.toml  Project.toml  README.md  base_defense.py  datasets.py  dkk17.jl  pyproject.toml  rep_saver.py  requirements.txt  run_experiment.py  train.py  train_test.py  util.py
defenses/julia/: quantum_filters.jl
experiments/: .gitignore
experiments/example/: example.toml
experiments/example_bgmd/: example_bgmd.toml
experiments/example_label_consistent/: example_label_consistent.toml
experiments/example_sever/: example_sever.toml
model/: model.py
modules/base_defense/: run_experiment.py  run_kmeans.jl  run_module.py  run_pca.jl  run_quantum.jl
modules/base_defense/src/julia/: run_filters.jl
modules/base_grad_saver/: run_module.py
modules/base_rep_saver/: run_experiment.py  run_module.py
modules/base_trainer/: run_experiment.py  run_module.py
modules/base_utils/: datasets.py  label_consistent_setup.sh  util.py
modules/base_utils/model/: lenet.py  model.py
modules/bgmd/: GeometricMedian.py  bgmd.py  bgmd_functional.py  run_module.py  utils.py
modules/sever/: run_module.py
rep_savers/: target_rep_saver.py
schemas/: base_defense.toml  base_grad_saver.toml  base_rep_saver.toml  base_retrainer.toml  base_trainer.toml  bgmd.toml  sever.toml
