[tool.poetry]
name = "spectral-signatures"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "*"
black = "^20.8b1"
python-language-server = "^0.35.0"
tqdm = "^4.49.0"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
statsmodels = "^0.12.0"
pip = "^20.2.3"
irlbpy = {git = "https://github.com/boonepeter/irlbpy", rev = "pgb"}
primme = "^3.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
